# resume_parser

./: README.md  pyproject.toml  setup.py
resume_parser/: api.py  hooks.py  setup.py
resume_parser/resume_module/doctype/resume_parser_settings/: resume_parser_settings.json
resume_parser/resume_parser/: hooks.py  modules.txt  setup.py
resume_parser/resume_parser/background_jobs/: retry_failed.py
resume_parser/resume_parser/public/js/: job_applicant.js
resume_parser/resume_parser/resume_module/doctype/resume_parser_settings/: resume_parser_settings.py
resume_parser/resume_parser/services/: llm_summarizer.py  pdf_extractor.py
resume_parser/services/: llm_summarizer.py  resume_handler.py
resume_parser/translations/: en.csv
